CACommunity-Salesforce/src/objects/SurveyTaker__c.object
<CustomObject>
    <fields>
        <fullName>CA_Owner__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responded By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <label>Communication URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Communication</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Respondents</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responded By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Respondent</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Survey__c</columns>
        <columns>Contact__c</columns>
        <columns>User__c</columns>
        <columns>Survey_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Respondents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>